...

  object Components {

    const val PERSISTENT_SCAFFOLD = "Persistent Scaffold"
    const val MEDIA_LIST_CONTENT = "Media List Content"
    const val MEDIA_GRID_CONTENT = "Media Grid Content - Mode %s"
    const val SCROLLABLE_CONTENT = "Scrollable Content"
    const val PULL_TO_REFRESH = "Pull to refresh"
    const val POSTER_IMAGE = "Poster image"

    object Fab {
      const val DISCOVER = "Discover Floating Action Button"
    }
...
    const val NAVIGATION_BAR = "App Navigation Bar"

    const val STATUS_PILL = "Status Pill %s"
    const val MULTIPLE_SELECT_HEADER = "Multiple Select Header"
  }

  const val LOADING_CONTENT = "LOADING_CONTENT"
  const val LINEAR_LOADING_INDICATOR = "Linear Loading Indicator"
  const val MEDIA_LIST_TAG = "MEDIA_LIST_TAG"
  const val SCROLL_TO_TOP_BUTTON = "SCROLL_TO_TOP_BUTTON_TAG"
  const val LOADING_PROGRESS = "Loading Progress Bar"
  const val BLANK_SLATE = "Blank Slate"

  const val LAZY_COLUMN = "Lazy Column"

  const val VIEW_ALL = "View All Button"

  object Rating {
...
  }

  object Modal {
    const val REQUEST_MOVIE = "Request Movie Modal"
    const val REQUEST_SEASONS = "Select Seasons Modal"
    const val ACTION_MENU = "Action Menu Modal"
    const val BOTTOM_SHEET = "Modal Bottom Sheet"

    const val DELETE_BUTTON = "Delete button for id %s"
  }

  object Request {
    const val LOADING_DROPDOWN_MENU = "Loading DropDown Menu %s"
...
  }

  object Menu {
    fun item(value: String) = "Menu Item $value"
    const val MENU_BUTTON_VERTICAL = "Menu Button Vertical"
    const val DROPDOWN_MENU = "Dropdown Menu"
    const val SPOILERS_OBFUSCATION = "Spoilers Obfuscation Button"
  }

  object Watchlist {
    const val TAB_BAR = "Watchlist Tab Bar %s"
    const val WATCHLIST_SCREEN = "Watchlist Screen"
    const val WATCHLIST_ERROR_CONTENT = "Watchlist Error Content"
  }

  object Lists {
    const val SCROLLABLE_CONTENT = "Lists Scrollable Content View Mode %s"
    const val SCREEN = "Lists Screen"

    const val PULL_TO_REFRESH = "List Pull To Refresh"
    const val DETAILS_SCREEN = "List Details Screen"

    const val CREATE_LIST_FAB = "Create List FAB"

...
  object Search {
    const val SEARCH_SCAFFOLD = "Search Scaffold"
  }

  object Credits {
    const val TAB_BAR = "Credits Tab Bar $%s"
    const val CAST_CREDITS_CONTENT = "Credits Content with cast"
    const val CREW_CREDITS_CONTENT = "Credits Content with crew"
  }

  object Onboarding {
    const val FULLSCREEN = "Fullscreen Onboarding Modal"
    const val MODAL = "Modal Onboarding"
  }
...
