<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="feature_add_to_account_list_login_description">You need to be logged in to add to your lists.</string>
  <string name="feature_add_to_account_empty_lists">You haven\'t created any lists.</string>
  <string name="feature_add_to_account_list_title">Add to list</string>
  <string name="feature_add_to_account_list_create">Create a new list</string>

  <string name="feature_add_to_account_action_remove_from_list">Remove from this list</string>

  <string name="feature_add_to_account_item_added_to_list_success"><![CDATA[Item successfully added to <b>%s</b>]]></string>
  <string name="feature_add_to_account_item_added_to_list_failure"><![CDATA[Item already exists in <b>%s</b>]]></string>
  <string name="feature_add_to_account_item_add_to_list_unexpected_failure"><![CDATA[Failed to add item in <b>%s</b>]]></string>

  <plurals name="feature_add_to_account_remove_items_confirmation">
    <item quantity="one"><![CDATA[Remove <b>%s</b> from <b>%s</b>?]]></item>
    <item quantity="other"><![CDATA[Remove <b>%s</b> items from <b>%s</b>?]]></item>
  </plurals>

  <string name="feature_add_to_account_remove_from_list_offline_error">You cannot remove from the list while you\'re offline</string>
  <string name="feature_add_to_account_remove_single_item_success">%s removed from %s</string>
  <string name="feature_add_to_account_remove_batch_items_success">%s items removed from %s</string>
</resources>