...
  <string name="core_ui_show_total_episodes_item">Show spoilers</string>
  <string name="core_ui_hide_total_episodes_item">Hide spoilers</string>
  <string name="core_ui_show_spoilers_tooltip">Show credits\' episode count</string>
  <string name="core_ui_hide_spoilers_tooltip">Hide credits\' episode count to avoid spoilers</string>

  <string name="core_ui_retry">Retry</string>
  <string name="core_ui_login">Login</string>
  <string name="core_ui_logout">Logout</string>
  <string name="core_ui_error_retry">Something when wrong. Please try again.</string>
  <string name="core_ui_password">Password</string>
  <string name="core_ui_view_all">View all</string>

  <string name="core_ui_create_list">Create list</string>
...
