package com.divinelink.feature.add.to.account.list

import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.hasContentDescription
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.onNodeWithContentDescription
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performScrollToIndex
import androidx.compose.ui.test.performScrollToNode
import com.divinelink.core.fixtures.model.list.ListItemFactory
import com.divinelink.core.model.PaginationData
import com.divinelink.core.model.exception.AppException
import com.divinelink.core.model.exception.SessionException
import com.divinelink.core.model.list.ListItem
import com.divinelink.core.model.media.MediaReference
import com.divinelink.core.model.media.MediaType
import com.divinelink.core.navigation.route.Navigation
import com.divinelink.core.navigation.route.Navigation.AddToListRoute
import com.divinelink.core.testing.ComposeTest
import com.divinelink.core.testing.repository.TestListRepository
import com.divinelink.core.testing.setVisibilityScopeContent
import com.divinelink.core.testing.uiTest
import com.divinelink.core.testing.usecase.TestAddItemToListUseCase
import com.divinelink.core.testing.usecase.TestFetchUserListsUseCase
import com.divinelink.core.ui.TestTags
import com.divinelink.core.ui.UiString
import com.divinelink.core.ui.resources.core_ui_login
import com.divinelink.feature.add.to.account.list.ui.AddToListScreen
import com.divinelink.feature.add.to.account.resources.Res
import com.divinelink.feature.add.to.account.resources.feature_add_to_account_empty_lists
import com.divinelink.feature.add.to.account.resources.feature_add_to_account_list_title
import io.kotest.matchers.shouldBe
import kotlinx.coroutines.channels.Channel
import kotlinx.coroutines.flow.flowOf
import org.jetbrains.compose.resources.getString
import kotlin.test.Test

class AddToListScreenTest : ComposeTest() {

  private val fetchUserListsUseCase = TestFetchUserListsUseCase()
  private val addItemToListUseCase = TestAddItemToListUseCase()
  private val listRepository = TestListRepository()
  private val route = AddToListRoute(
    id = 1234,
    mediaType = MediaType.MOVIE.value,
  )

  @Test
  fun `test AddToListModalBottomSheet`() = uiTest {
    listRepository.mockGetItemStatus(result = Result.success(false))

    fetchUserListsUseCase.mockResponse(
      Result.success(ListItemFactory.page1()),
    )

    val viewModel = AddToListViewModel(
      fetchUserListsUseCase = fetchUserListsUseCase.mock,
      addItemToListUseCase = addItemToListUseCase.mock,
      repository = listRepository.mock,
      route = route,
    )

    setVisibilityScopeContent {
      AddToListScreen(
        route = route,
        onNavigate = {},
        viewModel = viewModel,
      )
    }

    onNodeWithTag(TestTags.Lists.Add.SCREEN).assertIsDisplayed()
  }

  @Test
  fun `test AddToListModalBottomSheet with empty data`() = uiTest {
    fetchUserListsUseCase.mockResponse(
      Result.success(
        ListItemFactory.page1().copy(
          list = emptyList(),
        ),
      ),
    )

    val viewModel = AddToListViewModel(
      fetchUserListsUseCase = fetchUserListsUseCase.mock,
      addItemToListUseCase = addItemToListUseCase.mock,
      repository = listRepository.mock,
      route = route,
    )

    setVisibilityScopeContent {
      AddToListScreen(
        route = route,
        onNavigate = {},
        viewModel = viewModel,
      )
    }

    onNodeWithTag(TestTags.Lists.Add.SCREEN).assertIsDisplayed()
    onNodeWithText(getString(Res.string.feature_add_to_account_empty_lists)).assertIsDisplayed()
  }

  @Test
  fun `test login when unauthenticated`() = uiTest {
    var navigatedToTMDBAuth = false

    val channel = Channel<Result<PaginationData<ListItem>>>()
    fetchUserListsUseCase.mockResponse(channel)

    val viewModel = AddToListViewModel(
      fetchUserListsUseCase = fetchUserListsUseCase.mock,
      addItemToListUseCase = addItemToListUseCase.mock,
      repository = listRepository.mock,
      route = route,
    )

    setVisibilityScopeContent {
      AddToListScreen(
        route = route,
        onNavigate = {
          if (it is Navigation.TMDBAuthRoute) {
            navigatedToTMDBAuth = true
          }
        },
        viewModel = viewModel,
      )
    }

    channel.trySend(
      Result.failure(SessionException.Unauthenticated()),
    )

    onNodeWithTag(TestTags.BLANK_SLATE).assertIsDisplayed()
    onNodeWithText(getString(UiString.core_ui_login)).assertIsDisplayed().performClick()

    navigatedToTMDBAuth shouldBe true

    channel.send(Result.success(ListItemFactory.page2()))

    onNodeWithText(getString(Res.string.feature_add_to_account_list_title)).assertIsDisplayed()
  }

  @Test
  fun `test add to list with success`() = uiTest {
    listRepository.mockGetItemStatus(result = Result.success(false))

    fetchUserListsUseCase.mockResponse(
      flowOf(
        Result.success(ListItemFactory.page1()),
        Result.success(ListItemFactory.page2()),
      ),
    )

    val channel: Channel<Result<Boolean>> = Channel()
    addItemToListUseCase.mockResponse(channel)

    val viewModel = AddToListViewModel(
      fetchUserListsUseCase = fetchUserListsUseCase.mock,
      addItemToListUseCase = addItemToListUseCase.mock,
      repository = listRepository.mock,
      route = route,
    )

    setVisibilityScopeContent {
      AddToListScreen(
        route = route,
        onNavigate = {},
        viewModel = viewModel,
      )
    }

    onNodeWithText(getString(Res.string.feature_add_to_account_list_title)).assertIsDisplayed()

    onNodeWithTag(TestTags.LINEAR_LOADING_INDICATOR).assertIsNotDisplayed()

    onNodeWithText("Top Movies").assertIsDisplayed().performClick()

    onNodeWithTag(TestTags.LINEAR_LOADING_INDICATOR).assertIsDisplayed()

    channel.trySend(Result.success(true))

    onNodeWithTag(TestTags.LINEAR_LOADING_INDICATOR).assertIsNotDisplayed()
  }

  @Test
  fun `test onLoadMore with success`() = uiTest {
    listRepository.mockGetItemStatus(result = Result.success(false))

    val channel = Channel<Result<PaginationData<ListItem>>>()
    fetchUserListsUseCase.mockResponse(channel)

    val viewModel = AddToListViewModel(
      fetchUserListsUseCase = fetchUserListsUseCase.mock,
      addItemToListUseCase = addItemToListUseCase.mock,
      repository = listRepository.mock,
      route = route,
    )

    setVisibilityScopeContent {
      AddToListScreen(
        route = route,
        onNavigate = {},
        viewModel = viewModel,
      )
    }

    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsDisplayed()
    channel.trySend(Result.success(ListItemFactory.page1Many()))
    onNodeWithText(getString(Res.string.feature_add_to_account_list_title)).assertIsDisplayed()

    onNodeWithText(ListItemFactory.page1Many().list.first().name).assertIsDisplayed()

    channel.trySend(Result.success(ListItemFactory.page2Many()))

    onNodeWithTag(TestTags.Lists.SCROLLABLE_CONTENT).performScrollToIndex(19)

    onNodeWithText(ListItemFactory.page1Many().list.last().name).assertIsDisplayed()

    onNodeWithTag(TestTags.Lists.SCROLLABLE_CONTENT).performScrollToIndex(29)

    onNodeWithText(ListItemFactory.page2Many().list.last().name).assertIsDisplayed()
  }

  @Test
  fun `test get item status`() = uiTest {
    val mediaReference = MediaReference(
      mediaId = 1234,
      mediaType = MediaType.MOVIE,
    )

    val channel = Channel<Result<PaginationData<ListItem>>>()
    fetchUserListsUseCase.mockResponse(channel)

    ListItemFactory.page1Many().list.forEachIndexed { index, list ->
      listRepository.mockGetItemStatus(
        item = mediaReference,
        listId = list.id,
        // Mark as added lists with even index (0, 2, 4 etc.)
        result = Result.success(index % 2 == 0),
      )
    }

    ListItemFactory.page2Many().list.forEach { list ->
      listRepository.mockGetItemStatus(
        item = mediaReference,
        listId = list.id,
        result = Result.failure(AppException.Unknown()),
      )
    }

    val viewModel = AddToListViewModel(
      fetchUserListsUseCase = fetchUserListsUseCase.mock,
      addItemToListUseCase = addItemToListUseCase.mock,
      repository = listRepository.mock,
      route = route,
    )

    setVisibilityScopeContent {
      AddToListScreen(
        route = route,
        onNavigate = {},
        viewModel = viewModel,
      )
    }

    onNodeWithTag(TestTags.LOADING_CONTENT).assertIsDisplayed()
    channel.trySend(Result.success(ListItemFactory.page1Many()))
    onNodeWithText(getString(Res.string.feature_add_to_account_list_title)).assertIsDisplayed()

    channel.trySend(Result.success(ListItemFactory.page2Many()))
    ListItemFactory.page1Many().list.forEachIndexed { index, list ->
      if (index % 2 == 0) {
        onNodeWithTag(TestTags.Lists.SCROLLABLE_CONTENT).performScrollToNode(
          hasContentDescription("Added on list ${list.name}"),
        )
      }
    }

    channel.trySend(Result.success(ListItemFactory.page2Many()))

    ListItemFactory.page2Many().list.forEach { list ->
      onNodeWithTag(TestTags.Lists.SCROLLABLE_CONTENT).performScrollToNode(
        hasText(list.name),
      )
      onNodeWithContentDescription("Added on list ${list.name}").assertIsNotDisplayed()
    }

    // Scroll back to first item and assert that the get item status call is only fetched once
    // per item.
    onNodeWithTag(TestTags.Lists.SCROLLABLE_CONTENT).performScrollToIndex(0)

    ListItemFactory.page1Many().list.forEach { list ->
      listRepository.verifyGetItemStatus(
        listId = list.id,
        item = mediaReference,
        times = 1,
      )
    }
  }
}
